<resources>
    <string name="app_name">AndroidEncryptionDemo</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="action_settings">Settings</string>

    <string name="gen_key">Generate Key</string>
    <string name="gen_plaintext">Generate Plaintext</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>

    <string name="default_plaintext_length">50</string>
    <string name="plaintext_length_suffx">KB</string>

    <string name="encrypt_androidkeystore_aes">Android KeyStore AES</string>
    <string name="encrypt_androidkeystore_rsa">Android KeyStore (RSA-wrapped AES)</string>
    <string name="encrypt_nokeystore">No KeyStore</string>
    <string-array name="encrypt_impls">
        <item>@string/encrypt_nokeystore</item>
        <item>@string/encrypt_androidkeystore_rsa</item>
        <item>@string/encrypt_androidkeystore_aes</item>
    </string-array>

</resources>
